# openGL_learn

./: .gitignore  CMakeLists.txt  Makefile  compilation_database.o.json  compile_commands.json  glad.c  main.cpp
dependencies/include/glad/: glad.h
